k8s/pseugc-app-deployment-calgolab.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pseugc-app-deployment
  namespace: calgo-lab
spec:
  selector:
    matchLabels:
      app: pseugc-app
  template:
    metadata:
      labels:
        app: pseugc-app
    spec:
      containers:
        - name: pseugc-app
          image: sksdotsauravs/pseugc-app:latest
          ports:
            - containerPort: 8000
            - containerPort: 8501
          resources:
            requests:
              memory: "16Gi"
              cpu: "8"
            limits:
              memory: "24Gi"
              cpu: "128"
