k8s/pseugc-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pseugc-app-deployment
  namespace: calgo-lab
spec:
  selector:
    matchLabels:
      app: pseugc-app
  template:
    metadata:
      labels:
        app: pseugc-app
    spec:
      containers:
        - name: pseugc-app
          image: chandlernick/pseugc-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
            - containerPort: 8501
          resources:
            limits:
              nvidia.com/gpu: 1
              memory: 8192Mi
              cpu: 4
      nodeSelector:
        gpu: p100
